--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,10 @@
 a {
 	color:#222222;
-	text-decoration: none;		
+	text-decoration: none;
 }
 a:visited{
 	color:#222222;
-	text-decoration: none;		
+	text-decoration: none;
 }
 body{
 	background-color:#222222;
@@ -18,11 +18,11 @@ body{
 #header{
 	width:100%;
 	height:230px;
-	background-color:#222222;	
+	background-color:#222222;
 	padding-bottom:20px;
 	box-shadow:0 0 20px #000000;
 	position:relative;
-	border-bottom:solid #444444 8px;		
+	border-bottom:solid #444444 8px;
 }
 #entete{
 	width:1050px;
@@ -32,7 +32,7 @@ body{
 #logo{
 	float:left;
 	width:205px;
-	height:192px;	
+	height:192px;
 	position:relative;
 	top:50%;
 	margin-top:-96px;
@@ -43,10 +43,10 @@ body{
 	font-size:32px;
 	font-weight:bold;
 	width:800px;
-	height:50px;	
+	height:50px;
 	position:relative;
 	left:45px;
-	top:40px;	
+	top:40px;
 	text-shadow:1px 1px #111111, 2px 2px #000000;
 }
 #imLogo {
@@ -72,10 +72,10 @@ body{
 #connect a{
 	color:#222222;
 	font-weight:bold;
-	text-decoration: none;	
+	text-decoration: none;
 }
 #connect a :visited{
-	color:#222222;	
+	color:#222222;
 	font-weight:bold;
 	text-decoration: none;
 }
@@ -86,7 +86,7 @@ body{
 }
 #menu{
 	float : left;
-	width: 20%;	
+	width: 20%;
 	min-height:355px;
 	margin-left: 3px;
 	color:#222222;
@@ -97,7 +97,7 @@ body{
 }
 #menu a{
 	color:#222222;
-	text-decoration: none;	
+	text-decoration: none;
 }
 #menu a :visited{
 	color:#222222;
@@ -105,7 +105,7 @@ body{
 }
 #menuInt{
 	margin-top: 2px;
-	margin-left: 50px;	
+	margin-left: 50px;
 	min-height:367px;
 }
 #texte{
@@ -116,30 +116,30 @@ body{
 	min-height:380px;
 	color:#222222;
 }
-#spacer {     
-  clear: both; 
+#spacer {
+  clear: both;
 }
 #footer{
 	width:100%;
 	height:50px;
 	padding-top:10px;
 	background-color:#222222;
-	border-top:solid #444444 8px;	
+	border-top:solid #444444 8px;
 	padding-top:20px;
 	position:absolute;
 	bottom:0px;
 	box-shadow:0 -5px 5px #858585;
-	position:relative;	
+	position:relative;
 	color:#CCCCCC;
 	font-size:12px;
 	text-align:center;
 }
 label{
 	font-size:12pt;
-    font-weight:bold;	
+    font-weight:bold;
 }
 h1{
-	text-shadow:1px 1px 2px #333333;	
+	text-shadow:1px 1px 2px #333333;
 }
 * a:hover{
 	text-decoration: underline;
@@ -155,4 +155,13 @@ h1{
  	margin-right : 10px;
  	position:relative;
  	top:2px;
+}
+table{
+	width : 90%;
+	margin: 0 auto;
+	border-collapse: collapse;
+}
+
+td, th{
+	border: 1px solid black;
 }
